# Stock-AI

./: Makefile  README.md  environment.yml  package.json  pyproject.toml  requirements.txt  test_pytorch.py  test_runner.sh  verify_pytorch.py
docs/: mkdocs.yml
docs/docs/: index.md
sai/: __init__.py  dataset.py  features.py  plots.py
sai/modeling/: predict.py  train.py
src/models/: transaction_model.py
src/services/: transaction_monitor.py
tests/: test_transaction_monitor.py
